Change theme works for home page, log workout and buddy

--- a/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.html
@@ -1,7 +1,10 @@
-<ion-content>
+<ion-header>
   <ion-toolbar>
-    <ion-title>Live Data Graph</ion-title>
+    <ion-title>Emotibit</ion-title>
   </ion-toolbar>
+</ion-header>
+<ion-content>
+  
 
   <div class="chart-container">
       <canvas id="LiveDataChart"> {{ chart }} </canvas>
