--- a/Frontend/Emoticoach/src/app/pages/widgets/muscle-groups/modal-muscle/modal-muscle.component.html
+++ b/Frontend/Emoticoach/src/app/pages/widgets/muscle-groups/modal-muscle/modal-muscle.component.html
@@ -5,7 +5,7 @@
       <ion-button color="medium" (click)="cancel()">Cancel</ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="confirm()">Confirm</ion-button>
+      <ion-button (click)="confirm()" color="success">Confirm</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
