--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.scss
@@ -1,14 +1,17 @@
 ion-list {
-    background: #323232 !important;
+    background: var( --ion-color-dark);
+    
   }
 
-ion-item-divider {
+ion-item-divider.top-header {
     margin-top: 2px !important;
-    background: #833535 !important;
     text-align: center;
+
 }
+
+
 ion-card {
-    --background: #666666 !important;
+    --background: #666666;
     height: 70%;
     border: 2px solid #ffffff;
     border-radius: 10px !important;
@@ -17,30 +20,37 @@ ion-card {
         border-width: 0px;
     }
 }
-ion-item {
-    background-color: #323232 !important;
-    text-align: center;
-}
+
 
 ion-button {
     color: #ffffff;
 }
 
-ion-header {
-    color: #ffffff;
-    font-size: 110%;
-    
-}
+
 ion-title {
    
     color: #ffffff;
 }
 
 .name {
-    font-size: 115%;
+    font-size: 120%;
+    font-weight: 500;
 }
+.description {
+    font-weight: 20;
+    color: #a5a5a5;
+}
+
 ion-icon {
     color:#ffffff;
     opacity: 100%;
     size: large !important;
+}
+ion-item{
+    --background: #5a5a5a;
+
+}
+
+.selected-card {
+    --background: rgba(81, 38, 38, 0.629);
 }
