--- a/Frontend/Emoticoach/src/app/tabs/tabs.page.html
+++ b/Frontend/Emoticoach/src/app/tabs/tabs.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar color="primary" slot="bottom">
 
     <ion-tab-button tab="home">
       <ion-icon name="calendar"></ion-icon>
@@ -12,15 +12,20 @@
       <ion-icon name="document-text-outline"></ion-icon>
       <ion-label>Log</ion-label>
     </ion-tab-button>
-
-    <!-- <ion-tab-button tab="sync">
-      <ion-icon name="cloud-upload-sharp"></ion-icon>
-      <ion-label>Sync</ion-label>
-    </ion-tab-button> -->
+    
 
     <ion-tab-button tab="social">
       <ion-icon name="chatbubble-ellipses-sharp"></ion-icon>
       <ion-label>Gym Buddy</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="graph-livedata">
+      <ion-icon class="customSVG" src="../../assets/Emotibit.svg"></ion-icon>
+      <ion-label>Emotibit</ion-label>
+    </ion-tab-button>
+
   </ion-tab-bar>
+
+  
+
 </ion-tabs>
