--- a/Frontend/Emoticoach/src/global.scss
+++ b/Frontend/Emoticoach/src/global.scss
@@ -32,10 +32,6 @@
 
 
 
-ion-toolbar {
-  --background: #833535;
-}
-
 ion-content {
 
   // overwrite inline styles
@@ -43,13 +39,10 @@ ion-content {
     display: none;
   }
 
-  --background: #323232;
+  --background: var(--ion-color-dark);
 }
 
 
-ion-list {
-  background: #323232;
-}
 
 ion-modal {
   
@@ -68,3 +61,18 @@ ion-modal {
   
 }
 
+ion-toolbar {
+  --background: var(--ion-color-primary);
+}
+
+ion-card {
+  --background: var(--ion-color-dark);
+  background-color: var(--ion-color-dark);
+
+}
+
+ion-item {
+  --background: var(--ion-color-dark);
+  background-color: var(--ion-color-dark);
+  
+}
