updated onrepmax grapg

--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
@@ -14,7 +14,7 @@
 
   <ion-grid style="border-bottom: 2px solid grey">
     <ion-row>
-    <ion-buttons color="#1E1E1E" lines="none" class="date-selection">
+    <ion-buttons color="primary" lines="none" class="date-selection">
       <ion-col>
         <ion-button (click)="displayPreviousWeek()">
         <ion-icon slot="start" name="chevron-back-outline" size="large"></ion-icon>
@@ -22,7 +22,7 @@
       </ion-col>
 
       <ion-col>
-        <ion-text>{{previousWeekFormatted}} - {{rightsideWeekFormatted}}</ion-text>
+        <ion-text color="success">{{previousWeekFormatted}} - {{rightsideWeekFormatted}}</ion-text>
       </ion-col>
 
       <ion-col>
@@ -36,7 +36,7 @@
 
   <ion-grid>
     <ion-row>
-        <ion-item lines="none" color="#1E1E1E">
+        <ion-item lines="none" color="dark">
           <ion-select 
           interface="popover" 
           placeholder="Select workout" 
@@ -48,9 +48,7 @@
           </ion-select>
         </ion-item>
     </ion-row>
-  </ion-grid>
 
-  <ion-grid>
     <ion-row class="table-title-color">
         <ion-col class="left-table-text">
           <ion-text>This Week</ion-text>
@@ -63,11 +61,11 @@
   </ion-grid>
 
   <!-- add ngfor loop here to generate data -->
-  <ion-grid style="border-bottom: 2px solid grey">
+  <ion-grid style="border-bottom: 2px solid">
     <ion-row *ngFor="let row of workoutDates; let i = index">
       <ion-buttons>
         <ion-col class="left-table-text" size="auto">
-          <ion-text>{{workoutDates[i]}}</ion-text>
+          <ion-text color="success">{{workoutDates[i]}}</ion-text>
         </ion-col>
 
         <ion-col class="weight-text">
