--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.scss
@@ -4,7 +4,7 @@ ion-select{
 }
 
 ion-icon{
-    color: #fff;
+    color: var(--ion-color-primary);
 }
 
 .date-selection{
@@ -27,7 +27,7 @@ ion-icon{
 }
 
 .table-title-color{
-    background-color: #833535;
+    background-color: var(--ion-color-primary);;
 }
 
 .right{
