--- a/Frontend/Emoticoach/src/global.scss
+++ b/Frontend/Emoticoach/src/global.scss
@@ -45,20 +45,24 @@ ion-content {
 
 
 ion-modal {
-  
-  &::part(content){
+
+  &::part(content) {
     ion-icon {
       position: absolute;
     }
+
     .overlap {
       position: absolute;
     }
+
+    background-color: var(--ion-color-dark);
   }
-  
+
   --height: 50%;
   --border-radius: 16px;
-  --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  
+  --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+  0 4px 6px -4px rgb(0 0 0 / 0.1);
+
 }
 
 ion-toolbar {
@@ -74,5 +78,12 @@ ion-card {
 ion-item {
   --background: var(--ion-color-dark);
   background-color: var(--ion-color-dark);
-  
+
+}
+
+ion-popover {
+
+  ion-item {
+    color: var(--ion-color-success);
+  }
 }
