data-generator service made

--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.scss
@@ -11,7 +11,7 @@ ion-item-divider.top-header {
 
 
 ion-card {
-    --background: #666666;
+    --background: var(--ion-color-light);
     height: 70%;
     border: 2px solid #ffffff;
     border-radius: 10px !important;
@@ -35,6 +35,7 @@ ion-title {
 .name {
     font-size: 120%;
     font-weight: 500;
+    color: var(--ion-color-success);
 }
 .description {
     font-weight: 20;
@@ -47,10 +48,10 @@ ion-icon {
     size: large !important;
 }
 ion-item{
-    --background: #5a5a5a;
-
+    --background: var(--ion-color-dark);
 }
 
+
 .selected-card {
-    --background: rgba(81, 38, 38, 0.629);
+    --background: rgb(129, 58, 58, .5);
 }
