--- a/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.html
@@ -20,6 +20,10 @@
         <ion-button (click)="closeConnection()">Stop</ion-button>
       </ion-col>
       
+      <ion-col>
+        <ion-button (click)="generateworkouts()">generate</ion-button>
+
+      </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="auto">
