--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start" color="#fff" routerLink="/account">
+    <ion-buttons slot="start" color="#fff" routerLink="/tabs/account">
 
       <ion-button expand="block">
         <ion-icon name="person-circle-outline"></ion-icon>
