--- a/Frontend/Emoticoach/src/app/pages/account/change-pass/change-pass.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/account/change-pass/change-pass.page.scss
@@ -1,9 +1,8 @@
 ion-content{
-    background-color: var(--ion-color-primary);
 
     #header{
         height: 33%;
-        background-color: var(--ion-color-primary);
+        background: #833535;
         border-radius: 0 0 20px 20px;
         display: flex;
         flex-direction: column;
@@ -44,7 +43,7 @@ ion-content{
             background: #323232;
 
             ion-item{
-                --background: white;
+                --background: #D0CDCD;
                 --padding-start: 10px;
                 --highlight-height: 0;
                 --border-width: 0;
@@ -82,10 +81,13 @@ ion-content{
                 transform: translateX(-15%);
             }
         }
+        .error-message{
+            color: red;
+        }
     }
 }
 ion-card {
-    background-color: white;
+    background-color: #606060;
 }
 ion-card-content {
     background-color: #606060;
