data generator made but it spans to many api calls

--- a/Frontend/Emoticoach/src/app/app.component.html
+++ b/Frontend/Emoticoach/src/app/app.component.html
@@ -99,4 +99,4 @@
     </div>
 
 </ion-app>
-<script src="https://maps.googleapis.com/maps/api/js?key={AIzaSyB1bSwMFIwAwvpZH6qjo5b31-4-G2_UETA}&libraries=places"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={}&libraries=places"></script>
