--- a/Frontend/Emoticoach/src/app/pages/widgets/muscle-groups/modal-muscle/modal-muscle.component.html
+++ b/Frontend/Emoticoach/src/app/pages/widgets/muscle-groups/modal-muscle/modal-muscle.component.html
@@ -10,5 +10,10 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <app-muscle-svg [muscles]="muscles" (muscleSelected)="updateMuscle($event)" [canOpen]="false"></app-muscle-svg>
+  <ion-grid>
+    
+        <app-muscle-svg [muscles]="muscles" (muscleSelected)="updateMuscle($event)" [canOpen]="false"></app-muscle-svg>
+
+
+  </ion-grid>
 </ion-content>
