--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -19,7 +19,7 @@
       </ion-button>
 
     </ion-item-divider>
-    <ion-item-divider color="dark" *ngIf="deleting">
+    <ion-item-divider sticky color="dark" *ngIf="deleting">
       <ion-grid>
         <ion-row>
           <ion-label color="success">
