--- a/backend/webapp/templates/webapp/home.html
+++ b/backend/webapp/templates/webapp/home.html
@@ -48,6 +48,40 @@ Dashboard
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="col-xl-5 col-lg-6">
+    <div class="card shadow mb-4">
+      <!-- Card Header - Dropdown -->
+      <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Sleep Chart</h6>
+      </div>
+      <!-- Card Body -->
+      <div class="card-body">
+        <div id="sleepChart" class="chart-pie pt-4">
+          <!-- <canvas id="myPieChart"></canvas> -->
+        </div>
+        <hr>
+        See how much sleep you have been getting.
+      </div>
+    </div>
+  </div>
+  <div class="col-xl-7 col-lg-6">
+    <div class="card shadow mb-4">
+      <!-- Card Header - Dropdown -->
+      <div class="card-header py-3">
+          <h6 class="m-0 font-weight-bold text-primary">Weight Heatmap</h6>
+      </div>
+      <!-- Card Body -->
+      <div class="card-body">
+        <div id="weightChart" class="chart-pie pt-4">
+          <!-- <canvas id="myPieChart"></canvas> -->
+        </div>
+        <hr>
+        How has your weight been fluctuating?
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 {% block scripts %}
