Delete account added

--- a/Frontend/Emoticoach/src/app/pages/account/account.page.html
+++ b/Frontend/Emoticoach/src/app/pages/account/account.page.html
@@ -82,6 +82,7 @@
                   <ion-icon name="lock-closed"></ion-icon>
                   <ion-text>*********</ion-text>
                 </ion-item>
+                <ion-button color="danger" expand="block" (click)="deleteAccount()">Delete Account</ion-button>
               </ion-card-content>
             </ion-card>
           </ion-col>
