--- a/Frontend/Emoticoach/src/app/pages/account/change-pass/change-pass.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/account/change-pass/change-pass.page.scss
@@ -1,58 +1,49 @@
-
 ion-content{
-    background-color: var(--ion-color-primary);
 
-
-    #header {
+    #header{
         height: 33%;
-
-        background-color: var(--ion-color-primary);
-
+        background: #833535;
         border-radius: 0 0 20px 20px;
         display: flex;
         flex-direction: column;
         color: #ffffff;
         padding: 20px;
 
-        #app-bar {
+        #app-bar{
             height: 60px;
             display: flex;
             justify-content: space-between;
             align-items: center;
 
-            ion-icon {
+            ion-icon{
                 font-size: 24px;
                 margin-left: -5px;
             }
 
-            h1 {
-                font-size: 19px;
-                margin-bottom: 5px;
-            }
-
-            p {
-                font-size: 15px;
-                line-height: 1.4;
-            }
+        h1{
+            font-size: 19px;
+            margin-bottom: 5px;
+        }
+        p{
+            font-size: 15px;
+            line-height: 1.4;
+        }
         }
     }
-
-    .wrapper {
+    .wrapper{
         position: absolute;
         top: 26%;
         left: 4%;
         right: 4%;
 
-        .form-wrapper {
+        .form-wrapper{
             box-shadow: none;
             border-radius: 20px;
             padding: 15px 10px;
             background: #323232;
 
-
             ion-item{
-                --background: white;
-
+                --background: #D0CDCD;
                 --padding-start: 10px;
                 --highlight-height: 0;
                 --border-width: 0;
@@ -61,48 +52,43 @@ ion-content{
                 margin-bottom: 15px;
                 border-radius: 5px;
 
-                ion-icon {
+                ion-icon{
                     font-size: 18px;
                     color: #000000;
                 }
-
-                ion-input {
-                    color: var(--ion-color-medium);
+                ion-input{
+                    color: #606060;
                     margin-left: 10px;
                     font-size: 14px;
                 }
             }
 
-            ion-button {
-                margin-top: 25px;
+            ion-button{
+                margin-top: 25px;              
             }
         }
 
-        .line-text {
-            color: var(--ion-color-success);
-
+        .line-text{
             padding: 0 30px;
             position: relative;
             height: 20px;
             margin-top: 30px;
 
-            .text {
+            .text{
                 position: absolute;
                 top: -7px;
                 left: 25%;
                 transform: translateX(-15%);
             }
         }
+        .error-message{
+            color: red;
+        }
     }
 }
-
 ion-card {
-
-    color: var(--ion-color-medium);
-
+    background-color: #606060;
 }
-
 ion-card-content {
-    background-color: var(--ion-color-medium);
-
+    background-color: #606060;
 }
