--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.scss
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.scss
@@ -3,9 +3,9 @@ $my-msg-color: var(--ion-color-primary);
 $other-msg-color: var(--ion-color-medium);
 
 
-ion-grid {
-    display:inline-block;
-}
+// ion-grid {
+//     display:inline-block;
+// }
 
 ion-item {
     --background: $back-color !important;
