--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -23,8 +23,8 @@
     <img src="../../../assets/winner_leafs.png" />
     <div class="myOverlay">
 
-      <div class="card-title">Squat PR</div>
-      <div class="card-subtitle">325 lbs</div>
+      <div class="card-title">Bench PR</div>
+      <div class="card-subtitle">225 lbs</div>
     </div>
   </ion-card>
 
