--- a/Frontend/Emoticoach/src/app/tabs/tabs.page.html
+++ b/Frontend/Emoticoach/src/app/tabs/tabs.page.html
@@ -1,10 +1,19 @@
 <ion-tabs>
   <ion-tab-bar color="primary" slot="bottom">
 
+
     <ion-tab-button tab="home">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Today</ion-label>
       <!-- <ion-badge>6</ion-badge> -->
+    </ion-tab-button>
+
+
+
+  
+    <ion-tab-button tab="graph-livedata">
+      <ion-icon class="customSVG" src="../../assets/Emotibit.svg"></ion-icon>
+      <ion-label>Emotibit</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="log">
@@ -14,14 +23,16 @@
     </ion-tab-button>
     
 
+
+
     <ion-tab-button tab="social">
       <ion-icon name="chatbubble-ellipses-sharp"></ion-icon>
       <ion-label>Gym Buddy</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="graph-livedata">
-      <ion-icon class="customSVG" src="../../assets/Emotibit.svg"></ion-icon>
-      <ion-label>Emotibit</ion-label>
+    <ion-tab-button tab="workout-tables">
+      <ion-icon name="file-tray-full-outline"></ion-icon>
+      <ion-label>Tables</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
