--- a/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.html
@@ -22,8 +22,8 @@
       <ion-col size="auto" *ngIf="connectionOpen">
         <ion-button size="fill" (click)="closeConnection()">Stop</ion-button>
       </ion-col>
-
-      <!-- <ion-col>
+<!-- 
+      <ion-col>
         <ion-button (click)="generateworkouts()">generate</ion-button>
       </ion-col>  -->
 
@@ -36,7 +36,7 @@
       </ion-col>
       <ion-col size="auto">
         <ion-label>
-          {{ currentHeartrate }}
+            121
         </ion-label>
       </ion-col>
     </ion-row>
@@ -48,23 +48,23 @@
         </ion-label>
       </ion-col>
       <ion-col size="auto">
-        <ion-label>
+        <ion-label [ngClass]="{'blink': readyTolift}">
           <ion-icon name="checkmark-outline"></ion-icon>
         </ion-label>
       </ion-col>
     </ion-row>
 
     <ion-row class="ion-justify-content-left">
-      <ion-col size="auto">
+      <!-- <ion-col size="auto">
         <ion-label>
           Position:
         </ion-label>
-      </ion-col>
-      <ion-col size="auto">
+      </ion-col> -->
+      <!-- <ion-col size="auto">
         <ion-label>
           {{position}}
         </ion-label>
-      </ion-col>
+      </ion-col> -->
     </ion-row>
   </ion-grid>
 
