--- a/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.scss
@@ -1,3 +1,19 @@
 ion-button {
     --background-activated: var(--ion-color-primary);
   }
+
+  @keyframes blinking {
+    0% {
+      background-color: var(--ion-color-primary);
+      border: 1px solid #666;
+    }
+    100% {
+      background-color: #c7eb94;
+      border: 1px solid #666;
+    }
+  }
+  .blink {
+    width: 200px;
+    height: 200px;
+    animation: blinking 1s infinite;
+  }
